--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.1",
+    "crypto": "^1.0.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
+    "node-sellsy": "^1.5.5",
+    "oauth-1.0a": "^2.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.0"
