--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.1",
+    "bulma": "^0.9.4",
     "crypto": "^1.0.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
