--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "@next/font": "^13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.1",
     "bulma": "^0.9.4",
